feat (Modificar y Crear curso): Se añade la funcionalidad de cambiar de pagina a añadir etiquetas

--- a/Vistas/SeleccionEtiquetasPagina.xaml
+++ b/Vistas/SeleccionEtiquetasPagina.xaml
@@ -87,7 +87,7 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <ToggleButton Content="{Binding Nombre}" Style="{StaticResource estiloTglButtonEtiqueta}" Checked="SeleccionarEtiqueta" Unchecked="DeseleccionarEtiqueta"/>
+                        <ToggleButton Content="{Binding Nombre}" Style="{StaticResource estiloTglButtonEtiqueta}" Checked="SeleccionarEtiqueta" Unchecked="DeseleccionarEtiqueta" Loaded="CargarEtiquetas"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
